New info on adding business to OrgBook BC
Updates to contact page (new panel and minor from change), and small update to homepage, about how to add your business's information to OrgBook BC.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -81,6 +81,7 @@
     },
     "general": {
         "about-site-title": "About this site",
+        "adding-title": "How do I add my business to OrgBook BC?",
         "date-entered": "Date Entered",
         "date-issued": "Credential Issued Date",
         "display-cards": "Cards",
