--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -81,6 +81,7 @@
     },
     "general": {
         "about-site-title": "About this site",
+        "adding-title": "How do I add my business to OrgBook BC?",
         "date-entered": "Date Entered",
         "date-issued": "Credential Issued Date",
         "display-cards": "Cards",
